; ModuleID = '/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy.c_rpc_schema_add.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy.c_rpc_schema_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_schema = type { i64 }

@schemas_num = common dso_local global i64 0, align 8
@MAX_SCHEMAS = common dso_local global i64 0, align 8
@schemas = common dso_local global %struct.rpc_schema** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rpc_schema_add(%struct.rpc_schema* %0) #0 {
  %2 = alloca %struct.rpc_schema*, align 8
  store %struct.rpc_schema* %0, %struct.rpc_schema** %2, align 8
  %3 = load i64, i64* @schemas_num, align 8
  %4 = load i64, i64* @MAX_SCHEMAS, align 8
  %5 = icmp slt i64 %3, %4
  %6 = zext i1 %5 to i32
  %7 = call i32 @assert(i32 %6)
  %8 = load i64, i64* @schemas_num, align 8
  %9 = load %struct.rpc_schema*, %struct.rpc_schema** %2, align 8
  %10 = getelementptr inbounds %struct.rpc_schema, %struct.rpc_schema* %9, i32 0, i32 0
  store i64 %8, i64* %10, align 8
  %11 = load %struct.rpc_schema*, %struct.rpc_schema** %2, align 8
  %12 = load %struct.rpc_schema**, %struct.rpc_schema*** @schemas, align 8
  %13 = load i64, i64* @schemas_num, align 8
  %14 = add nsw i64 %13, 1
  store i64 %14, i64* @schemas_num, align 8
  %15 = getelementptr inbounds %struct.rpc_schema*, %struct.rpc_schema** %12, i64 %13
  store %struct.rpc_schema* %11, %struct.rpc_schema** %15, align 8
  ret void
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
